[gd_scene format=3 uid="uid://b7oncobnacxmt"]

[ext_resource type="Script" uid="uid://dtmc4h78k8685" path="res://src/UI/GameMenu/GameMenu/LocaleButton.gd" id="1_ganev"]

[node name="LocaleButton" type="OptionButton" unique_id=1593449628]
editor_description = "UI-600, UI-895, UI-896, UI-898, UI-899, UIFUN-322"
custom_minimum_size = Vector2(150, 0)
alignment = 2
text_overrun_behavior = 2
fit_to_longest_item = false
script = ExtResource("1_ganev")

[connection signal="item_selected" from="." to="." method="_on_item_selected"]
